<resources>
    <string name="app_name">CISC325 Meet Up</string>
    <string name="log_in_button">Log In</string>
    <string name="header">Meet Up! An app for social gatherings.</string>
    <string name="queensID">Please Enter Your Queens net ID</string>
    <string name="hint_for_edit_text_net_ID">Your NetID</string>
    <string name="action_settings">Settings</string>
    <string name="options_exit_text">Exit</string>
    <string name="enter_name">Enter Your Name</string>
    <string name="passing_data">Enter</string>
    <string name="calling_activity_message">The your netID is</string>
    <string name="action_help">Help Menu</string>
    <string name="action_legal">Legal</string>
    <string name="search_for_events">Search Events</string>
    <string name="create_new_event">Create Event</string>
    <string name="event_number_1">Soccer Event - Dec 6th</string>
    <string name="event_number_1_spots_avail">Spots Avail - 6/11</string>
    <string name="event_number_2">Musical Session - Nov 30th</string>
    <string name="event_number_2_spots_avail">Spots Avail- 3/5</string>
    <string name="event_number_3">Volleyball Event - Dec, 9th</string>
    <string name="event_number_3_spots_avail">Spots Avail - 10/12</string>
</resources>
